# supertonic-tool

./: .gitignore  AGENTS.md  README.md  tokens.css
.hallmark/: log.json  preflight.json
.opencode/skills/debugging/: SKILL.md
py/: api_server.py  pyproject.toml  requirements.txt  ws_server.py
tool/: WEBSOCKET_API.md  start_tts_server.bat  start_tts_server.sh  start_video_localizer.bat  start_video_localizer.sh  sync_upstream.bat  test_pipeline.py  tts_web.html  video_localizer_web.html  video_pipeline_server.py  ws_tts_server.py
tool/samples/: sample_import.csv  sample_import.md  sample_import.txt
tool/video_pipeline/: __init__.py  dub.py  media.py  subtitle.py  transcribe.py  translate.py
